remove LD_PRELOAD

--- a/share/apps/modulefiles/BLAS/OpenBLAS-0.3.5
+++ b/share/apps/modulefiles/BLAS/OpenBLAS-0.3.5
@@ -3,4 +3,5 @@
 #  OpenBLAS 0.3.5
 #
 prepend-path 		LD_LIBRARY_PATH /share/apps/BLAS/OpenBLAS-0.3.5/lib
-prepend-path		LD_PRELOAD /share/apps/BLAS/OpenBLAS-0.3.5/lib/libopenblas.so
+prepend-path 		LIBRARY_PATH /share/apps/BLAS/OpenBLAS-0.3.5/lib
+prepend-path 		CPATH /share/apps/BLAS/OpenBLAS-0.3.5/include
