--- a/share/apps/modulefiles/Intel/mkl-2019.3
+++ b/share/apps/modulefiles/Intel/mkl-2019.3
@@ -3,4 +3,5 @@
 #  mkl 2019.3
 #
 prepend-path 		LD_LIBRARY_PATH /share/apps/Intel/mkl-2019.3/mkl/lib/intel64
-prepend-path		LD_PRELOAD /share/apps/Intel/mkl-2019.3/mkl/lib/intel64/libmkl_rt.so
+prepend-path 		LIBRARY_PATH /share/apps/Intel/mkl-2019.3/mkl/lib/intel64
+prepend-path 		CPATH /share/apps/Intel/mkl-2019.3/mkl/include
