fix typos, and add group module files

--- a/share/apps/modulefiles/FishTaco/fishtaco-1.1.1
+++ b/share/apps/modulefiles/FishTaco/fishtaco-1.1.1
@@ -9,10 +9,10 @@ proc ModulesHelp { } {
     puts stderr ""
     puts stderr "\tActivate the FishTaco conda environment with:"
     puts stderr ""
-    puts stderr "\t\tsource /share/apps/Anaconda/Miniconda3-4.5.12/bin/activate /share/apps/FishTaco/fishtaco-1.1.1"
+    puts stderr "\t\tsource activate /share/apps/FishTaco/fishtaco-1.1.1"
     puts stderr ""
     puts stderr "\tDeactivate FishTaco before using other Python environments:"
-    puts stderr "\t\tsource /share/apps/Anaconda/Miniconda3-4.5.12/bin/deactivate"
+    puts stderr "\t\tsource deactivate"
     puts stderr "\t\tmodule unload FishTaco/fishtaco-1.1.1"
 }
 
