--- a/share/apps/modulefiles/QIIME2/qiime2-2019.1
+++ b/share/apps/modulefiles/QIIME2/qiime2-2019.1
@@ -9,10 +9,10 @@ proc ModulesHelp { } {
     puts stderr ""
     puts stderr "\tActivate the QIIME2 conda environment with:"
     puts stderr ""
-    puts stderr "\t\tsource /share/apps/Anaconda/Miniconda3-4.5.12/bin/activate /share/apps/QIIME2/qiime2-2019.1"
+    puts stderr "\t\tsource activate /share/apps/QIIME2/qiime2-2019.1"
     puts stderr ""
-    puts stderr "\tDeactivate FishTaco before using other Python environments:"
-    puts stderr "\t\tsource /share/apps/Anaconda/Miniconda3-4.5.12/bin/deactivate"
+    puts stderr "\tDeactivate QIIME2 before using other Python environments:"
+    puts stderr "\t\tsource deactivate"
     puts stderr "\t\tmodule unload QIIME2/qiime2-2019.1"
 }
 
