--- a/share/apps/modulefiles/R/R-3.5.3
+++ b/share/apps/modulefiles/R/R-3.5.3
@@ -9,5 +9,8 @@ conflict MKL/*
 module load Java/JDK-8.0.202
 module load MKL/mkl-2019.3
 
+setenv	OMP_NUM_THREADS	1
+setenv	MKL_NUM_THREADS	1
+
 prepend-path 		PATH 		/share/apps/R/R-3.5.3/bin
 prepend-path		MANPATH		/share/apps/R/R-3.5.3/share/man/
