--- a/share/apps/modulefiles/PROJ/proj-6.2.1
+++ b/share/apps/modulefiles/PROJ/proj-6.2.1
@@ -6,4 +6,5 @@ prepend-path		PATH		/share/apps/PROJ/proj-6.2.1/bin
 prepend-path 		LD_LIBRARY_PATH	/share/apps/PROJ/proj-6.2.1/lib
 prepend-path 		LIBRARY_PATH	/share/apps/PROJ/proj-6.2.1/lib
 prepend-path 		CPATH		/share/apps/PROJ/proj-6.2.1/include
+prepend-path 		PKG_CONFIG_PATH	/share/apps/PROJ/proj-6.2.1/lib/pkgconfig
 prepend-path 		MANPATH		/share/apps/PROJ/proj-6.2.1/share/man
