--- a/share/apps/modulefiles/GDAL/gdal-3.0.2
+++ b/share/apps/modulefiles/GDAL/gdal-3.0.2
@@ -4,6 +4,7 @@
 #
 
 module load PROJ/proj-6.2.1
+module load HDF5/hdf5-1.8.21
 
 prepend-path		PATH		/share/apps/GDAL/gdal-3.0.2/bin
 prepend-path 		LD_LIBRARY_PATH	/share/apps/GDAL/gdal-3.0.2/lib
